NIFI-13430 Fixed a few issues caused by Java 8 vs 21